# champagneInBrazil

./: .env.example  .gitignore  Dockerfile  README.md  app.py  brainstorm.md  config.yml  dev_requirements.txt  package.json  requirements.txt  wine_data.csv
app/: app.py
app/static/: style.css
app/templates/: analytics.html  edit_wine.html  entry.html  experienced_wines.html  index.html  my_cellar.html  wine_detail.html
appelation_rag/data/: config.yml  data_gatherer.py  main.py  pdf_reader.py  scraper_main.py
appelation_rag/embeddings/: embeddings.py
db/: config.yaml  main.py
servers/: app.py
servers/backend/: pyproject.toml  server.py
servers/backend/api/: lifespan.py  main.py
servers/backend/api/routes/: router.py
servers/backend/api/routes/endpoints/: add.py  analytics.py  chat.py  entry_detail.py  product_overviews.py  wine.py
servers/backend/constants/: llm.py  prompts.py
servers/backend/enums/: llm_provider.py
servers/backend/models/: llm_message.py
servers/backend/models/sql/: fact_wine.py  key_value.py  wine.py
servers/backend/models/sql/wine/: wine_base.py  wine_create.py  wine_read.py  wine_table.py  wine_update.py
servers/backend/models/sql/wine/create/: create_in_cellar.py  create_in_tasting.py  create_in_wishlist.py
servers/backend/services/: chroma.py  database.py  list_available_models.py  llm_client.py  wine.py  wine_lists.py
servers/backend/utils/: db_utils.py  get_env.py  llm_calls.py  llm_providers.py  orm.py
setup/: README.md
setup/db/: main.py
templates/: index.html
user_input_page/: user_input_page.html
(+54 files in other folders)
